#11 Changed height of desc div to prevent overflow

--- a/wp-content/themes/sorayatec/assets/css/custom.css
+++ b/wp-content/themes/sorayatec/assets/css/custom.css
@@ -66,7 +66,7 @@ input:focus, textarea:focus{
 /* Banner */ 
 /* ================================================== */
 .banner{
-    height: 670px;
+    min-height: 670px;
     padding: 50px 0 0;
     border-bottom: 17px solid #5b5b5b;
     background: url(../images/home-banner-bg.png) no-repeat center bottom / 100%;
